--- a/lms/templates/header/theme-toggle-button.html
+++ b/lms/templates/header/theme-toggle-button.html
@@ -10,7 +10,7 @@
         <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" fill="currentColor"/>
       </svg>
       <span>Dark</span>
-      <span id="theme-label" class="sr-only">Toggle dark mode</span>
+      <span id="theme-label" class="sr-only">Bật/tắt chế độ tối/span>
     </label>
   </div>
 </div>
