--- a/lms/templates/header/header.html
+++ b/lms/templates/header/header.html
@@ -84,7 +84,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
             <%include file="navbar-not-authenticated.html" args="online_help_token=online_help_token"/>
         % endif
     </div>
-    <div class="mobile-menu hidden" aria-label=${_("More Options")} role="menu" id="mobile-menu"></div>
+    <div class="mobile-menu hidden" aria-label=${_("Thêm tùy chọn")} role="menu" id="mobile-menu"></div>
     </div>
 </header>
 
@@ -114,7 +114,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
             % else:
                 <input title="session update url" type="hidden" class="url-endpoint" value="${reverse('update_language')}" data-user-is-authenticated="false">
             % endif
-            <label><span class="sr">${_("Choose Language")}</span>
+            <label><span class="sr">${_("Chọn ngôn ngữ")}</span>
             <select class="input select language-selector" id="settings-language-value" name="language">
                 % for language in languages:
                     % if language[0] == LANGUAGE_CODE:
