--- a/lms/templates/header/navbar-authenticated.html
+++ b/lms/templates/header/navbar-authenticated.html
@@ -51,7 +51,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       href="${marketing_link('COURSES')}"
       aria-current="${'page' if '/courses' in request.path else 'false'}"
     >
-      ${_('Discover Courses')}
+      ${_('Khám phá khóa học')}
     </a>
   </div>
 % endif
