--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -17,7 +17,7 @@
 <%block name="header_extras">
   % for template_name in ["course_card", "filter_bar", "filter", "facet", "facet_option"]:
   <script type="text/template" id="${template_name}-tpl">
-      <%static:include path="discovery/${template_name}.underscore" />
+     <%static:include path="discovery/${template_name}.underscore" />
   </script>
   % endfor
   <%static:require_module module_name="js/discovery/discovery_factory" class_name="DiscoveryFactory">
@@ -32,63 +32,147 @@
 </%block>
 % endif
 
-<%block name="pagetitle">${_("Courses")}</%block>
+<%block name="pagetitle">${_("Các khóa học")}</%block>
 
-<main id="main" aria-label="Content" tabindex="-1">
+<script>
+(function () {
+  var mq = window.matchMedia('(min-width: 1200px)');
+  var obs, resizeTimer;
+
+  function els() {
+    return {
+      body: document.body,
+      sidebar: document.getElementById('filters-sidebar'),
+      dropdownMenu: document.querySelector('.filter-block .dropdown-menu'),
+    };
+  }
+
+  function currentFacets(root) {
+    return root ? root.querySelector('.search-facets') : null;
+  }
+
+  function setBodyFlag(on) {
+    var b = document.body;
+    if (on) b.classList.add('facet-sidebar-active'); else b.classList.remove('facet-sidebar-active');
+  }
+
+  function moveFacets() {
+    var { sidebar, dropdownMenu } = els();
+    if (!sidebar || !dropdownMenu) return;
+
+    var inDropdown = currentFacets(dropdownMenu);
+    var inSidebar  = currentFacets(sidebar);
+
+    if (mq.matches) {
+      // Desktop: cần facets ở sidebar
+      if (!inSidebar && inDropdown) {
+        sidebar.appendChild(inDropdown);
+      }
+      setBodyFlag(!!currentFacets(sidebar)); // chỉ ẩn toggle khi sidebar thực sự có content
+    } else {
+      // Mobile: trả về dropdown
+      if (!inDropdown && inSidebar) {
+        dropdownMenu.appendChild(inSidebar);
+      }
+      setBodyFlag(false);
+    }
+  }
+
+  function watchDropdown() {
+    var { dropdownMenu } = els();
+    if (!dropdownMenu) return;
+    if (obs) obs.disconnect();
+    obs = new MutationObserver(function(muts){
+      // Nếu Discovery render lại facets trong dropdown => chuyển sang sidebar nếu đang ở desktop
+      if (mq.matches) moveFacets();
+    });
+    obs.observe(dropdownMenu, { childList: true, subtree: true });
+  }
+
+  // Khởi tạo
+  window.addEventListener('load', function () {
+    // đợi Discovery dựng DOM xong
+    setTimeout(function(){
+      moveFacets();
+      watchDropdown();
+    }, 60);
+  });
+
+  // Khi vượt ngưỡng 992px
+  (mq.addEventListener || mq.addListener).call(mq, 'change', function () {
+    moveFacets();
+  });
+
+  // Fallback: khi resize nhưng không vượt breakpoint
+  window.addEventListener('resize', function(){
+    clearTimeout(resizeTimer);
+    resizeTimer = setTimeout(moveFacets, 120);
+  });
+
+  // Hook “dự phòng” nếu bạn đã phát event này sau khi update facets
+  document.addEventListener('edx.discovery.update', function(){
+    setTimeout(function(){ moveFacets(); watchDropdown(); }, 0);
+  });
+})();
+</script>
+
+
+<main id="main" aria-label="Nội dung" tabindex="-1">
     <section class="find-courses">
       <section class="courses-container">
-        <!-- NEW IN INDIGO Heading was added. -->
         <div class="course-heading-area">
-          <h2>Unlock Your Potential: Discover New Courses Today!</h2>
+          <h2>Khai phá tiềm năng của bạn: Khám phá các khóa học mới ngay hôm nay!</h2>
       
-          <p>Explore a world of knowledge and enhance your skills with our diverse range of courses</p>
+          <p>Khám phá thế giới tri thức và nâng cao kỹ năng của bạn với các khóa học đa dạng của chúng tôi</p>
         </div>
-        <!-- NEW IN INDIGO Modified search bar and filters. -->
         % if course_discovery_enabled:
           <div class="saerch-bar-discover">
-            <div class="dropdown filter-block">
+            <div class="dropdown filter-block hide-large" >
               <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <svg class="filter-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                 <path d="M2 3C2 2.44772 2.44772 2 3 2H13C13.5523 2 14 2.44772 14 3V4.25245C14 4.51767 13.8946 4.77202 13.7071 4.95956L9.62623 9.04044C9.43869 9.22798 9.33333 9.48233 9.33333 9.74755V11.3333L6.66667 14V9.74755C6.66667 9.48233 6.56131 9.22798 6.37377 9.04044L2.29289 4.95956C2.10536 4.77202 2 4.51767 2 4.25245V3Z" stroke="#9CA3AF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <span>Filters</span>
+                <span>Bộ lọc</span>
                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 7.29289C5.68342 6.90237 6.31658 6.90237 6.7071 7.29289L9.99999 10.5858L13.2929 7.29289C13.6834 6.90237 14.3166 6.90237 14.7071 7.29289C15.0976 7.68342 15.0976 8.31658 14.7071 8.70711L10.7071 12.7071C10.3166 13.0976 9.68341 13.0976 9.29289 12.7071L5.29289 8.70711C4.90237 8.31658 4.90237 7.68342 5.29289 7.29289Z" fill="#9CA3AF"/>
                   </svg>
               </a>
               <div class="dropdown-menu search-facets-lists" aria-labelledby="dropdownMenuLink">
-                  <aside aria-label="${_('Refine Your Search')}" class="search-facets phone-menu">
-                    <h2 class="header-search-facets">${_('Refine Your Search')}</h2>
+                  <aside aria-label="${_('Tinh chỉnh tìm kiếm của bạn')}" class="search-facets phone-menu" style="width: 100% !important;">
+                    <h2 class="header-search-facets">${_('Tinh chỉnh tìm kiếm của bạn')}</h2>
                     <section class="search-facets-lists">
                     </section>
-                  </aside>
+                  </aside>  
               </div>
             </div>
             <div class="discover-search">
-            <div id="discovery-form" role="search" aria-label="course" class="wrapper-search-context">
-              <form class="wrapper-search-input">
-                <label for="discovery-input" class="sr">${_('Search for a course')}</label>
-                <div class="input-holder">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 4C5.79086 4 4 5.79086 4 8C4 10.2091 5.79086 12 8 12C10.2091 12 12 10.2091 12 8C12 5.79086 10.2091 4 8 4ZM2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 9.29583 13.5892 10.4957 12.8907 11.4765L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L11.4765 12.8907C10.4957 13.5892 9.29583 14 8 14C4.68629 14 2 11.3137 2 8Z" fill="#9CA3AF"/>
-                    </svg>
-                  <input id="discovery-input" class="discovery-input" placeholder="${_('Explore course')}" type="text"/>
-                </div>
-                <div class="button-holder">
-                  <button type="submit" class="button postfix discovery-submit" title="${_('Search')}">
-                    Search
-                  </button>
-                </div>
-              </form>
-              <div id="discovery-message" class="search-status-label"></div>
-            </div>
-            <div id="filter-bar" class="filters hide-phone is-collapsed">>
+              <div id="discovery-form" role="search" aria-label="course" class="wrapper-search-context">
+                <form class="wrapper-search-input">
+                  <label for="discovery-input" class="sr">${_('Tìm kiếm một khóa học')}</label>
+                  <div class="input-holder">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M8 4C5.79086 4 4 5.79086 4 8C4 10.2091 5.79086 12 8 12C10.2091 12 12 10.2091 12 8C12 5.79086 10.2091 4 8 4ZM2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 9.29583 13.5892 10.4957 12.8907 11.4765L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L11.4765 12.8907C10.4957 13.5892 9.29583 14 8 14C4.68629 14 2 11.3137 2 8Z" fill="#9CA3AF"/>
+                      </svg>
+                    <input id="discovery-input" class="discovery-input" placeholder="${_('Khám phá khóa học')}" type="text"/>
+                  </div>
+                  <div class="button-holder">
+                    <button type="submit" class="button postfix discovery-submit" title="${_('Tìm kiếm')}">
+                      Tìm kiếm
+                    </button>
+                  </div>
+                </form>
+                <div id="discovery-message" class="search-status-label"></div>
+              </div>
+              <div id="filter-bar" class="filters hide-phone is-collapsed">
             </div>
           </div>
         </div>
+        <aside id="filters-sidebar"
+               class="filters-sidebar"
+               aria-label="${_('Tinh chỉnh tìm kiếm của bạn')}">
+          </aside>
       % endif
-
-        <div class="course-holder courses${'' if course_discovery_enabled else ' no-course-discovery'}" role="region" aria-label="${_('List of Courses')}">
+        <div class="course-holder courses${'' if course_discovery_enabled else ' no-course-discovery'}" role="region" aria-label="${_('Danh sách các khóa học')}">
           <ul class="courses-listing courses-list">
             %for course in courses:
             <li class="courses-listing-item">
@@ -100,3 +184,4 @@
       </section>
     </section>
 </main>
+
