translate to vi-VN fix bug

--- a/lms/templates/course.html
+++ b/lms/templates/course.html
@@ -41,7 +41,7 @@ from django.urls import reverse
     </div>
 
     <a href="${reverse('about_course', args=[str(course.id)])}" class="learn-more">
-      ${_("Learn More")}
+      ${_("Tìm hiểu thêm")}
     </a>
   </div>
 
