--- a/lms/templates/static_templates/help.html
+++ b/lms/templates/static_templates/help.html
@@ -31,7 +31,7 @@ should_show_order_history = not enterprise_customer_portal
     <section class="container about help-page">
         <div class="help-hero">
             <div class="hero-text">
-                <h1>
+                <h1 class="text-white">
                     <%block name="pageheader">${page_header or _("Cần hỗ trợ?")}</%block>
                 </h1>
                 <p class="lead">
