--- a/lms/templates/header/navbar-logo-header.html
+++ b/lms/templates/header/navbar-logo-header.html
@@ -42,8 +42,7 @@ active_help     = 'active' if '/help' in current_path or '/support' in current_p
     <a href="${branding_api.get_home_url()}"
       class="brand-link d-inline-flex align-center"
       title="${_("{platform_name} Trang chủ").format(platform_name=static.get_platform_name())}">
-      <img src="${static.url('images/logo_cusc.png')}" alt="${static.get_platform_name()} Logo" class="logo logo-cusc" />
-      <img src="${static.url('images/logo_ctu.png')}" alt="CTU Logo" class="logo logo-ctu" />
+      <img src="${static.url('images/logo.png')}" alt="${static.get_platform_name()} Logo" class="logo" />
       <span class="brand-text">${static.get_platform_name()}</span>
     </a>
 
